--- a/CPU_Renderer/CPU_Renderer.vcxproj.filters
+++ b/CPU_Renderer/CPU_Renderer.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="Source\Input\Input.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Vector\Vector.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Colors\Colors.h">
@@ -36,6 +39,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Source\Input\Input.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Vector\Vector.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
