--- a/CPU_Renderer/CPU_Renderer.vcxproj
+++ b/CPU_Renderer/CPU_Renderer.vcxproj
@@ -175,6 +175,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Source\Camera\Camera.cpp" />
     <ClCompile Include="Source\Colors\Colors.cpp" />
     <ClCompile Include="Source\Display\Display.cpp" />
     <ClCompile Include="Source\Input\Input.cpp" />
@@ -189,6 +190,7 @@
     <ClCompile Include="Source\Vector\Vector.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Source\Camera\Camera.h" />
     <ClInclude Include="Source\Colors\Colors.h" />
     <ClInclude Include="Source\Display\Display.h" />
     <ClInclude Include="Source\Input\Input.h" />
